scala_library(
    name = "lib",
    srcs = glob(["src/main/scala/ai/chronon/flink/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = _FLINK_DEPS + [
        "//aggregator:lib",
        "//api:lib",
        "//api:thrift_java",
        "//online:lib",
        "//tools/build_rules/spark:spark-exec",
        maven_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        maven_artifact_with_suffix("org.rogach:scallop"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.kafka:kafka-clients"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
        maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("io.confluent:kafka-schema-registry-client"),
        maven_artifact("io.confluent:kafka-protobuf-provider"),
        maven_artifact("org.apache.hadoop:hadoop-common"),
        maven_artifact("org.apache.hadoop:hadoop-client-api"),
        maven_artifact("org.apache.hadoop:hadoop-yarn-api"),
        maven_artifact("org.apache.commons:commons-lang3"),
        maven_artifact("org.apache.flink:flink-metrics-prometheus"),
    ],
)

test_deps = _FLINK_TEST_DEPS + _SCALA_TEST_DEPS + [
    ":lib",
    "//online:lib",
    "//api:thrift_java",
    "//api:lib",
    "//aggregator:lib",
    "//tools/build_rules/spark:spark-exec",
    maven_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
    maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("org.apache.logging.log4j:log4j-api"),
    maven_artifact("org.apache.logging.log4j:log4j-core"),
    maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
    maven_artifact("org.apache.avro:avro"),
    maven_artifact("io.confluent:kafka-schema-registry-client"),
    maven_artifact("io.confluent:kafka-protobuf-provider"),
    maven_artifact("org.apache.kafka:kafka-clients"),
    maven_artifact("com.google.protobuf:protobuf-java"),
    maven_artifact("org.apache.hadoop:hadoop-common"),
    maven_artifact("org.apache.hadoop:hadoop-client-api"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/scala/ai/chronon/flink/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/scala/ai/chronon/flink/**/*.scala"]),
    # defined in prelude_bazel file
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)

jvm_binary(
    name = "flink_assembly",
    # To exclude runtime dependencies not needed for flink environment in the cluster
    # otherwise we run into version conflict errors
    deploy_env = ["//tools/build_rules/flink:flink"],
    main_class = "ai.chronon.flink.FlinkJob",
    runtime_deps = [":lib"],
)

jvm_binary(
    name = "flink_kafka_assembly",
    # To exclude runtime dependencies not needed for flink environment in the cluster
    # otherwise we run into version conflict errors
    deploy_env = ["//tools/build_rules/flink:flink"],
    main_class = "ai.chronon.flink.FlinkKafkaItemEventDriver",
    runtime_deps = [":lib"],
)

## Connectors targets ##
scala_library(
    name = "pubsub_connectors_lib",
    srcs = glob(["src/main/scala/ai/chronon/flink_connectors/pubsub/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = _FLINK_DEPS + [
        "//online:lib",
        "//api:lib",
        "//flink:lib",
        maven_artifact_with_suffix("org.rogach:scallop"),
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("org.apache.flink:flink-connector-gcp-pubsub"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("com.esotericsoftware.kryo:kryo"),

        # Additional deps to be able to look up PubSub schemas
        maven_artifact("com.google.cloud:google-cloud-pubsub",),
        maven_artifact("com.google.api.grpc:proto-google-cloud-pubsub-v1"),
        maven_artifact("com.google.api:gax"),
        maven_artifact("com.google.api:api-common"),
        maven_artifact("com.google.protobuf:protobuf-java"),
    ],
)

jvm_binary(
    name = "connectors_pubsub",
    deploy_env = ["//tools/build_rules/flink:flink"],
    main_class = "None",
    runtime_deps = [
        ":pubsub_connectors_lib",
    ],
)

jvm_binary(
    name = "flink_pubsub_assembly",
    # To exclude runtime dependencies not needed for flink environment in the cluster
    # otherwise we run into version conflict errors
    deploy_env = ["//tools/build_rules/flink:flink"],
    main_class = "ai.chronon.flink_connectors.pubsub.FlinkPubSubItemEventDriver",
    runtime_deps = [":pubsub_connectors_lib"],
)

scala_test_suite(
    name = "connectors_pubsub_tests",
    srcs = glob(["src/test/scala/ai/chronon/flink_connectors/pubsub/**/*.scala"]),
    # defined in prelude_bazel file
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    visibility = ["//visibility:public"],
    deps = _FLINK_TEST_DEPS + _SCALA_TEST_DEPS + [
        "//online:lib",
        "//api:lib",
       ":lib",
       ":pubsub_connectors_lib",
       maven_artifact("com.google.cloud:google-cloud-pubsub",),
       maven_artifact("com.google.api.grpc:proto-google-cloud-pubsub-v1"),
       maven_artifact("com.google.api:gax"),
       maven_artifact("com.google.api:api-common"),
       maven_artifact("com.google.protobuf:protobuf-java"),
    ]
)
