scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]) + glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = _VERTX_DEPS + _CIRCE_DEPS + [
        "//api:lib",
        "//api:thrift_java",
        "//online:lib",
        "//service_commons:lib",
        "//spark:lib",
        scala_artifact("org.typelevel:cats-core"),
        scala_artifact("com.chuusai:shapeless"),
        scala_artifact("org.json4s:json4s-core"),
        scala_artifact("org.json4s:json4s-jackson"),
        scala_artifact("org.scala-lang.modules:scala-java8-compat"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
        maven_artifact("ch.qos.logback:logback-classic"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("com.typesafe:config"),
        maven_artifact("io.netty:netty-all"),
        maven_artifact("io.micrometer:micrometer-registry-statsd"),
        maven_artifact("io.micrometer:micrometer-core"),
    ],
)

test_deps = _VERTX_TEST_DEPS + _CIRCE_DEPS + [
    ":lib",
    "//api:thrift_java",
    "//api:lib",
    "//online:lib",
    "//spark:lib",
    "//service_commons:lib",
    # Libraries
    scala_artifact("org.typelevel:cats-core"),
    scala_artifact("com.chuusai:shapeless"),
    scala_artifact("org.scala-lang.modules:scala-java8-compat"),
    scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    # Testing
    scala_artifact("org.scalatest:scalatest-matchers-core"),
    scala_artifact("org.scalatest:scalatest-core"),
    scala_artifact("org.scalatest:scalatest"),
    scala_artifact("org.scalatest:scalatest-flatspec"),
    scala_artifact("org.scalatest:scalatest-funsuite"),
    scala_artifact("org.scalatest:scalatest-shouldmatchers"),
    scala_artifact("org.scalactic:scalactic"),
    scala_artifact("org.scalatestplus:mockito-3-4"),
    scala_artifact("org.mockito:mockito-scala"),
    maven_artifact("org.mockito:mockito-core"),
    maven_artifact("org.scalatest:scalatest-compatible"),
    maven_artifact("junit:junit"),
    maven_artifact("com.novocode:junit-interface"),
    maven_artifact("net.bytebuddy:byte-buddy"),
    maven_artifact("net.bytebuddy:byte-buddy-agent"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    resources = glob(["src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_junit_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    data = glob(["src/test/resources/**/*"]),
    resources = glob(["hub/src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
