scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]) + glob(["src/main/**/*.java"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = _VERTX_DEPS + _CIRCE_DEPS + [
        "//api:lib",
        "//api:thrift_java",
        "//online:lib",
        "//service_commons:lib",
        "//spark:lib",
        maven_artifact_with_suffix("org.typelevel:cats-core"),
        maven_artifact_with_suffix("com.chuusai:shapeless"),
        maven_artifact_with_suffix("org.json4s:json4s-core"),
        maven_artifact_with_suffix("org.json4s:json4s-jackson"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        maven_artifact("ch.qos.logback:logback-classic"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("com.typesafe:config"),
        maven_artifact("io.netty:netty-all"),
        maven_artifact("io.micrometer:micrometer-registry-statsd"),
        maven_artifact("io.micrometer:micrometer-core"),
    ],
)

test_deps = _VERTX_TEST_DEPS + _CIRCE_DEPS + _SCALA_TEST_DEPS + [
    ":lib",
    "//api:thrift_java",
    "//api:lib",
    "//online:lib",
    "//spark:lib",
    "//service_commons:lib",
    maven_artifact_with_suffix("org.typelevel:cats-core"),
    maven_artifact_with_suffix("com.chuusai:shapeless"),
    maven_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
    maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
    maven_artifact("net.bytebuddy:byte-buddy"),
    maven_artifact("net.bytebuddy:byte-buddy-agent"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    resources = glob(["src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_junit_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    data = glob(["src/test/resources/**/*"]),
    resources = glob(["hub/src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)

jvm_binary(
    name = "hub_assembly",
    main_class = "ai.chronon.service.ChrononServiceLauncher",
    runtime_deps = [":lib"],
)
