scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]) + glob(["src/main/**/*.java"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//aggregator:lib",
        "//api:lib",
        "//api:thrift_java",
        "//tools/build_rules/spark:spark-exec",
        maven_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
        maven_artifact_with_suffix("org.json4s:json4s-core"),
        maven_artifact_with_suffix("org.json4s:json4s-jackson"),
        maven_artifact_with_suffix("org.json4s:json4s-ast"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        maven_artifact("com.datadoghq:java-dogstatsd-client"),
        maven_artifact_with_suffix("org.rogach:scallop"),
        maven_artifact("net.jodah:typetools"),
        maven_artifact("com.github.ben-manes.caffeine:caffeine"),
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact_with_suffix("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact_with_suffix("com.softwaremill.sttp.client3:core"),
        maven_artifact_with_suffix("com.softwaremill.sttp.model:core"),
        maven_artifact_with_suffix("com.softwaremill.sttp.shared:core"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.apache.kafka:kafka-clients"),
        maven_artifact("org.apache.hadoop:hadoop-common"),
        maven_artifact("org.apache.hadoop:hadoop-client-api"),
    ],
)

test_deps = [
    ":lib",
    "//api:thrift_java",
    "//api:lib",
    "//aggregator:lib",
    "//tools/build_rules/spark:spark-exec",
    # Libraries
    maven_artifact("com.github.ben-manes.caffeine:caffeine"),
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("org.apache.hive:hive-exec"),
    # Testing
    maven_artifact_with_suffix("org.scalatest:scalatest-matchers-core"),
    maven_artifact_with_suffix("org.scalatest:scalatest-core"),
    maven_artifact_with_suffix("org.scalatest:scalatest"),
    maven_artifact_with_suffix("org.scalatest:scalatest-flatspec"),
    maven_artifact_with_suffix("org.scalatest:scalatest-funsuite"),
    maven_artifact_with_suffix("org.scalatest:scalatest-shouldmatchers"),
    maven_artifact_with_suffix("org.scalactic:scalactic"),
    maven_artifact_with_suffix("org.scalatestplus:mockito-3-4"),
    maven_artifact_with_suffix("org.mockito:mockito-scala"),
    maven_artifact("org.mockito:mockito-core"),
    maven_artifact("org.scalatest:scalatest-compatible"),
    maven_artifact("junit:junit"),
    maven_artifact("com.novocode:junit-interface"),
    maven_artifact("net.bytebuddy:byte-buddy"),
    maven_artifact("net.bytebuddy:byte-buddy-agent"),
    maven_artifact("org.apache.hadoop:hadoop-common"),
    maven_artifact("org.apache.hadoop:hadoop-client-api"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    resources = glob(["src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    resources = glob(["src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
