scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]) + glob(["src/main/**/*.java"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//aggregator:lib",
        "//api:lib",
        "//api:thrift-java",
        "//tools/build_rules/spark:spark-exec",
        scala_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
        scala_artifact_with_suffix("org.json4s:json4s-core"),
        scala_artifact_with_suffix("org.json4s:json4s-jackson"),
        scala_artifact_with_suffix("org.json4s:json4s-ast"),
        scala_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        maven_artifact("com.datadoghq:java-dogstatsd-client"),
        scala_artifact_with_suffix("org.rogach:scallop"),
        maven_artifact("net.jodah:typetools"),
        maven_artifact("com.github.ben-manes.caffeine:caffeine"),
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        scala_artifact_with_suffix("com.fasterxml.jackson.module:jackson-module-scala"),
        scala_artifact_with_suffix("com.softwaremill.sttp.client3:core"),
        scala_artifact_with_suffix("com.softwaremill.sttp.model:core"),
        scala_artifact_with_suffix("com.softwaremill.sttp.shared:core"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
        maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.apache.kafka:kafka-clients"),
    ],
)

test_deps = [
    ":lib",
    "//api:thrift-java",
    "//api:lib",
    "//aggregator:lib",
    "//tools/build_rules/spark:spark-exec",
    # Libraries
    maven_artifact("com.github.ben-manes.caffeine:caffeine"),
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("org.apache.hive:hive-exec"),
    # Testing
    scala_artifact_with_suffix("org.scalatest:scalatest-matchers-core"),
    scala_artifact_with_suffix("org.scalatest:scalatest-core"),
    scala_artifact_with_suffix("org.scalatest:scalatest"),
    scala_artifact_with_suffix("org.scalatest:scalatest-flatspec"),
    scala_artifact_with_suffix("org.scalatest:scalatest-funsuite"),
    scala_artifact_with_suffix("org.scalatest:scalatest-shouldmatchers"),
    scala_artifact_with_suffix("org.scalactic:scalactic"),
    scala_artifact_with_suffix("org.scalatestplus:mockito-3-4"),
    scala_artifact_with_suffix("org.mockito:mockito-scala"),
    maven_artifact("org.mockito:mockito-core"),
    scala_artifact("org.scalatest:scalatest-compatible"),
    maven_artifact("junit:junit"),
    maven_artifact("com.novocode:junit-interface"),
    maven_artifact("net.bytebuddy:byte-buddy"),
    maven_artifact("net.bytebuddy:byte-buddy-agent"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    resources = glob(["src/test/resources/**/*"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    resources = glob(["src/test/resources/**/*"]),
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
