OTEL_DEPS = [
    maven_artifact("io.opentelemetry:opentelemetry-api"),
    maven_artifact("io_opentelemetry:opentelemetry-context"),
    maven_artifact("io_opentelemetry:opentelemetry-sdk-common"),
    maven_artifact("io.opentelemetry:opentelemetry-sdk"),
    maven_artifact("io.opentelemetry:opentelemetry-sdk-metrics"),
    maven_artifact("io.opentelemetry:opentelemetry-exporter-otlp"),
    maven_artifact("io.opentelemetry:opentelemetry-exporter-prometheus"),
]

scala_library(
    name = "metrics_lib",
    srcs = glob(["src/main/scala/ai/chronon/online/metrics/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = OTEL_DEPS + [
        "//api:lib",
        "//api:thrift_java",
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
    ],
)

scala_library(
    name = "serde_lib",
    srcs = glob(["src/main/scala/ai/chronon/online/serde/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = [
        "//api:lib",
        "//api:thrift_java",
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("com.linkedin.avroutil1:avro-fastserde"),
        "//tools/build_rules/spark:spark-exec",
    ],
)

scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]) + glob(["src/main/**/*.java"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = OTEL_DEPS + [
        ":metrics_lib",
        "//aggregator:lib",
        "//api:lib",
        "//api:thrift_java",
        "//tools/build_rules/spark:spark-exec",
        maven_artifact_with_suffix("org.scala-lang.modules:scala-java8-compat"),
        maven_artifact_with_suffix("org.json4s:json4s-core"),
        maven_artifact_with_suffix("org.json4s:json4s-jackson"),
        maven_artifact_with_suffix("org.json4s:json4s-ast"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        maven_artifact("com.datadoghq:java-dogstatsd-client"),
        maven_artifact_with_suffix("org.rogach:scallop"),
        maven_artifact("net.jodah:typetools"),
        maven_artifact("com.github.ben-manes.caffeine:caffeine"),
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact_with_suffix("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact_with_suffix("com.softwaremill.sttp.client3:core"),
        maven_artifact_with_suffix("com.softwaremill.sttp.model:core"),
        maven_artifact_with_suffix("com.softwaremill.sttp.shared:core"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("com.linkedin.avroutil1:avro-fastserde"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.apache.kafka:kafka-clients"),
        maven_artifact("org.apache.hadoop:hadoop-common"),
        maven_artifact("org.apache.hadoop:hadoop-client-api"),
    ],
)

test_deps = _SCALA_TEST_DEPS + [
    ":lib",
    "//api:thrift_java",
    "//api:lib",
    "//aggregator:lib",
    "//tools/build_rules/spark:spark-exec",
    maven_artifact("com.github.ben-manes.caffeine:caffeine"),
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("org.apache.hive:hive-exec"),
    maven_artifact("net.bytebuddy:byte-buddy"),
    maven_artifact("net.bytebuddy:byte-buddy-agent"),
    maven_artifact("org.apache.hadoop:hadoop-common"),
    maven_artifact("org.apache.hadoop:hadoop-client-api"),
    maven_artifact("io.opentelemetry:opentelemetry-api"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = True,
    resources = glob(["src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    resources = glob(["src/test/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
