scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = _VERTX_DEPS + [
        "//api:lib",
        "//api:thrift_java",
        "//online:lib",
        scala_artifact_with_suffix("org.apache.logging.log4j:log4j-api-scala"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
    ],
)

test_deps = [
    ":lib",
    "//api:thrift_java",
    "//api:lib",
    "//online:lib",
    "//service_commons:lib",
    # Libraries
    scala_artifact_with_suffix("org.apache.logging.log4j:log4j-api-scala"),
    maven_artifact("org.apache.logging.log4j:log4j-core"),
    maven_artifact("org.apache.logging.log4j:log4j-api"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = _VERTX_DEPS + _SCALA_TEST_DEPS + test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
